# mei_tools

./: .gitignore  01_MEI_Tools_Notebook.ipynb  01_MEI_Updating_2025.ipynb  02_MEI_Tools_in_Google_Colab.ipynb  03_MEI_Tools_in_Google_Colab.md  04_Sib_to_MEI_Guide.md  MEI_Tools_in_Google_Colab.md  MuseScore_to_MEI_Guide.md  README.md  Sib_to_MEI_Guide.md  crim_25.mss  musicaFicta_color.qml  pyproject.toml  sample_crim_metadata_dict.py
A_mei_to_process/: Bach_BWV_0772.mei  Bach_BWV_0773.mei  Bach_BWV_0774.mei  Bach_BWV_0775.mei  Bach_BWV_0776.mei  Bach_BWV_0777.mei  Bach_BWV_0778.mei  Bach_BWV_0779.mei  Bach_BWV_0780.mei  Bach_BWV_0781.mei  Bach_BWV_0782.mei  Bach_BWV_0783.mei  Bach_BWV_0784.mei  Bach_BWV_0785.mei  Bach_BWV_0786.mei
D_mei_with_updated_metadata/: Ror0102_rev.mei  Ror0104_rev.mei  Ror0105_rev.mei  Ror0107_rev.mei
E_mei_with_updated_music_features/: Ror0101.mei  Ror0102.mei  Ror0103.mei  Ror0104_rev_rev.mei  Ror0105.mei  Ror0106_rev_rev.mei
MuseScore Style Sheet and Plug In/: crim_25.mss
extracted_metadata_csv/: hum_drum_extracted_metadata.csv
mei_to_process/: Ror0101.mei  Ror0102.mei  Ror0103.mei  Ror0104.mei  Ror0105.mei  Ror0106.mei  Ror0107.mei
mei_tools/: __init__.py  mei_metadata_extractor.py  mei_metadata_processor.py  mei_metadata_updater_generic.py  mei_music_feature_processor.py  midi_to_xml_tools.py
mei_updated/: Ror0101_rev.mei  Ror0102_rev.mei  Ror0103_rev.mei  Ror0104_rev.mei  Ror0105_rev.mei  Ror0106_rev.mei  Ror0107_rev.mei
mei_with_updated_metadata/: Ror0101_rev.mei  Ror0103_rev.mei  Ror0106_rev.mei
(+28 files in other folders)
