[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mei_tools"
version = "2.0.2"
description = "Tools for processing MEI (Music Encoding Initiative) files"
authors = [
    "Richard Freedman <your.email@example.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "==5.1.0"
datetime = "^5.5"


